@@ -26,3 +26,4 @@ stamp-h.in
 testart
 testuta
 libart-config
+libartConf.sh
