@@ -5,11 +5,13 @@ LIBART_MAJOR_VERSION=0
 LIBART_MINOR_VERSION=0
 LIBART_MICRO_VERSION=0
 LIBART_VERSION=$LIBART_MAJOR_VERSION.$LIBART_MINOR_VERSION.$LIBART_MICRO_VERSION
+LIBART_VERSION_INFO=`expr $LIBART_MAJOR_VERSION + $LIBART_MINOR_VERSION`:$LIBART_MICRO_VERSION:$LIBART_MINOR_VERSION
 
 AC_SUBST(LIBART_MAJOR_VERSION)
 AC_SUBST(LIBART_MINOR_VERSION)
 AC_SUBST(LIBART_MICRO_VERSION)
 AC_SUBST(LIBART_VERSION)
+AC_SUBST(LIBART_VERSION_INFO)
 
 VERSION=$LIBART_VERSION
 
@@ -21,7 +23,12 @@ AM_PROG_LIBTOOL
 
 AM_MAINTAINER_MODE
 
-LIBART_LIBS=$LIBS
+LIBART_LIBDIR='-L${libdir}'
+LIBART_INCLUDEDIR='-I${includedir}'
+LIBART_LIBS='-lart_lgpl'
+
+AC_SUBST(LIBART_LIBDIR)
+AC_SUBST(LIBART_INCLUDEDIR)
 AC_SUBST(LIBART_LIBS)
 
 AC_OUTPUT([
