@@ -1,3 +1,12 @@
+Thu Nov 19 00:19:40 1998  Raph Levien  <raph@gimp.org>
+
+	* libartConf.sh.in: added
+
+	* Makefile.am: added creation of libartConf.sh, added -version-info
+	* configure.in: added LIBART_VERSION_INFO, support for libartConf.sh
+	
+	* libart.m4: updated version history :)
+
 Wed Nov 18 18:15:20 1998  Raph Levien  <raph@gimp.org>
 
 	* configure.in (LIBART_VERSION): set this, so that libart-config
